--- a/src/main/resources/View/Menu.fxml
+++ b/src/main/resources/View/Menu.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MenuController">
+<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MenuController">
    <children>
-      <Button layoutX="274.0" layoutY="187.0" mnemonicParsing="false" text="Button" />
+      <Label fx:id="naam" layoutX="286.0" layoutY="89.0" text="Welkom" />
+      <Button layoutX="79.0" layoutY="175.0" mnemonicParsing="false" onMouseClicked="#overzicht" text="Overzicht" />
+      <Button layoutX="282.0" layoutY="175.0" mnemonicParsing="false" onMouseClicked="#beheer" text="Beheer" />
+      <Button layoutX="471.0" layoutY="175.0" mnemonicParsing="false" onMouseClicked="#loguit" text="Uitloggen" />
    </children>
 </AnchorPane>
