--- a/src/main/resources/View/Details.fxml
+++ b/src/main/resources/View/Details.fxml
@@ -73,6 +73,6 @@
          </font>
       </Label>
         <Button fx:id="home" layoutX="85.0" layoutY="341.0" mnemonicParsing="false" onMouseClicked="#home" prefHeight="25.0" prefWidth="100.0" text="Annuleer" AnchorPane.leftAnchor="100.0" />
-        <Button fx:id="actie" layoutX="439.0" layoutY="341.0" mnemonicParsing="false" onMouseClicked="#vh" prefHeight="25.0" prefWidth="100.0" text="Actie" AnchorPane.rightAnchor="100.0" />
+        <Button fx:id="actie" layoutX="439.0" layoutY="341.0" mnemonicParsing="false" onMouseClicked="#actie" prefHeight="25.0" prefWidth="100.0" text="Actie" AnchorPane.rightAnchor="100.0" />
     </children>
 </AnchorPane>
