--- a/src/main/resources/View/Overzicht.fxml
+++ b/src/main/resources/View/Overzicht.fxml
@@ -6,7 +6,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Button?>
 <AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.OverzichtController">
+   <Label fx:id="naam" layoutX="572.0" layoutY="6.0" prefHeight="40.0" prefWidth="100.0" text="Label" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
    <children>
       <ScrollPane fx:id="scroll" layoutY="82.0" maxHeight="319" prefWidth="600.0">
          <content>
@@ -24,5 +26,6 @@
          </font></Label>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutY="34.0" prefHeight="53.0" prefWidth="304.0" text="Product" />
       <Label alignment="CENTER" layoutX="495.0" layoutY="34.0" prefHeight="54.0" prefWidth="103.0" text="Aanwezig" />
+      <Button fx:id="b" layoutY="1.0" mnemonicParsing="false" onAction="#back" text="&lt;" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
