--- a/src/main/resources/View/Beheer.fxml
+++ b/src/main/resources/View/Beheer.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Button?>
 <AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BeheerController">
     <Label fx:id="naam" layoutX="572.0" layoutY="6.0" prefHeight="40.0" prefWidth="100.0" text="Label" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
     <children>
@@ -13,17 +14,16 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="598.0">
                     <children>
-                        <VBox fx:id="container" prefHeight="0.0" prefWidth="500.0" />
-                        <VBox fx:id="opVoorraad" layoutX="497.0" prefHeight="318.0" prefWidth="100.0" />
+                        <VBox fx:id="container" prefHeight="318.0" prefWidth="600.0" />
                     </children>
                 </AnchorPane>
             </content>
         </ScrollPane>
-        <Label alignment="CENTER" layoutX="-1.0" layoutY="1.0" prefHeight="60.0" prefWidth="600.0" text="Overzicht">
+        <Label alignment="CENTER" layoutX="-1.0" layoutY="1.0" prefHeight="60.0" prefWidth="600.0" text="Beheer">
             <font>
                 <Font size="22.0" />
             </font></Label>
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutY="34.0" prefHeight="53.0" prefWidth="304.0" text="Product" />
-        <Label alignment="CENTER" layoutX="495.0" layoutY="34.0" prefHeight="54.0" prefWidth="103.0" text="Aanwezig" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="0" layoutY="34.0" prefHeight="53.0" prefWidth="600.0" text=" Soort Product" />
+        <Button fx:id="b" layoutY="1.0" mnemonicParsing="false" onAction="#back" text="&lt;" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
     </children>
 </AnchorPane>
