--- a/src/main/resources/View/Details.fxml
+++ b/src/main/resources/View/Details.fxml
@@ -76,4 +76,9 @@
         <Button fx:id="home" layoutX="85.0" layoutY="341.0" mnemonicParsing="false" onMouseClicked="#home" prefHeight="25.0" prefWidth="100.0" text="Annuleer" AnchorPane.leftAnchor="100.0" />
         <Button fx:id="actie" layoutX="439.0" layoutY="341.0" mnemonicParsing="false" onMouseClicked="#actie" prefHeight="25.0" prefWidth="100.0" text="Actie" AnchorPane.rightAnchor="100.0" />
     </children>
+    <Label fx:id="error" style="-fx-text-fill: RED" layoutX="205.0" layoutY="300.0" prefHeight="40.0" prefWidth="350.0" text="InputError" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="270.0">
+        <font>
+            <Font size="13.0" />
+        </font>
+    </Label>
 </AnchorPane>
